[gd_scene load_steps=2 format=2]

[ext_resource path="res://tela_1.gd" type="Script" id=1]

[node name="tela_1" type="Node2D"]
script = ExtResource( 1 )

[node name="btn_lista_automática" type="Button" parent="."]
margin_left = 43.0
margin_top = 318.0
margin_right = 242.0
margin_bottom = 372.0
text = "Gerar Lista"

[node name="btn_lista_personalizada" type="Button" parent="."]
margin_left = 290.0
margin_top = 316.0
margin_right = 492.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( -676, -258 )
text = "Criar Lista"

[node name="btn_apagar" type="Button" parent="."]
margin_left = 546.0
margin_top = 316.0
margin_right = 741.0
margin_bottom = 370.0
text = "Apagar"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 46.0
margin_top = 406.0
margin_right = 990.0
margin_bottom = 564.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 41.0
margin_top = 21.0
margin_right = 980.0
margin_bottom = 287.0

[node name="btn_criar_texto" type="Button" parent="."]
margin_left = 789.0
margin_top = 313.0
margin_right = 989.0
margin_bottom = 370.0
text = "Criar texto"

[connection signal="pressed" from="btn_lista_automática" to="." method="_on_btn_lista_automtica_pressed"]
[connection signal="pressed" from="btn_lista_personalizada" to="." method="_on_btn_lista_personalizada_pressed"]
[connection signal="pressed" from="btn_apagar" to="." method="_on_btn_apagar_pressed"]
[connection signal="pressed" from="btn_criar_texto" to="." method="_on_btn_criar_texto_pressed"]
